crates/memtrack/tests/snapshots/c_tests__posix_memalign_einval.snap
---
source: crates/memtrack/tests/c_tests.rs
expression: formatted_events
---
[
    "Malloc { size: 512 }",
    "Free",
]
