crates/memtrack/tests/snapshots/c_tests__posix_memalign_test.snap
---
source: crates/memtrack/tests/c_tests.rs
expression: formatted_events
---
[
    "AlignedAlloc { size: 768 }",
    "Free",
]
